--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  margin: 0px;
+  height: 100%;
+}
+
+* {
+  margin: 0px;
+}
+
+button {
+  border: none;
+}
