--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -1,6 +1,6 @@
 <main>
-  <div class="news_frame" *ngFor="let new of news">
-    <div class="news_img">
+  <div class="news_frame" *ngFor="let new of news" [style.grid-row]=randomSpanning()>
+    <div class="news_img" >
       <img src="{{new.img}}" alt="">
     </div>
     <div class="news_text">
