--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
-  margin: 0px;
-  height: 100%;
+  background-color: #1f1719;
 }
 
 * {
   margin: 0px;
+  font-family: 'Roboto', sans-serif;
 }
 
 button {
