--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,6 +1,8 @@
 <div id="main_content">
-  <button routerLink="news"><h1>NEWS</h1></button>
-  <button routerLink="try"><h1>TRY</h1></button>
-  <button><h1>WHO</h1></button>
+  <div id="buttons">
+    <button routerLink="news"><h1>NEWS</h1></button>
+    <button routerLink="try"><h1>TRY</h1></button>
+    <button id="who_button"><h1>WHO</h1></button>
+  </div>
 </div>
 
