Añadido carga en el who y estilo cambiado

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -2,7 +2,7 @@
   <div id="buttons">
     <button routerLink="news"><h1>NEWS</h1></button>
     <button routerLink="try"><h1>TRY</h1></button>
-    <button id="who_button"><h1>WHO</h1></button>
+    <button id="who_button" routerLink="who"><h1>WHO</h1></button>
   </div>
 </div>
 
