--- a/src/app/pages/who/who.component.css
+++ b/src/app/pages/who/who.component.css
@@ -1,16 +1,74 @@
+* {
+  transition: all 1s, color 0.1s;
+}
+
+main {
+  display: grid;
+  gap: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  min-height: 100vh;
+  justify-items: center;
+  padding: 100px;
+  background: url("/assets/img/logo_blur.png") no-repeat center center fixed;
+}
+
 .who_frame {
-  width: 200px;
-  height: 200px;
+  display: grid;
+  background: #3a2a2c;
+  grid-template-columns: 250px;
+  grid-template-rows: 250px 50px;
+  width: 250px;
+  height: 300px;
+  padding: 20px;
+  justify-items: center;
+  align-items: center;
+  border-radius: 30px;
+  cursor: pointer;
+  box-shadow: black 0px 0px 10px;
 }
+
 .who_img {
-  width: 100%;
-  height: 100%;
   border-radius: 50%;
-  border: 1px solid #ccc;
+  height: 100%;
+  width: 100%;
+  box-shadow: black 0px 0px 10px;
 }
+
 .who_img img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.who_name {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: white;
+  position: relative;
+  z-index: 1;
+  top: 0;
+}
+
+.who_frame:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s, box-shadow 0.5s;
+  box-shadow: black 0px 0px 20px;
+}
+
+.who_frame:hover .who_name {
+  top: -150px;
+  transition: all 0.5s;
+  transform: scale(1.5);
+}
+
+.who_frame:hover .who_img {
+  box-shadow: black 0px 0px 20px;
+  filter: blur(1px);
+  transition: all 0.5s;
+}
+
+.who_frame:hover .who_name h3 {
+  transition: all 0.5s;
+  text-shadow: black 0px 0px 10px;
 }
