aHecho el estilo de las fichas de person y funciones para identificar el botdón

--- a/src/app/pages/person/person.component.html
+++ b/src/app/pages/person/person.component.html
@@ -1,1 +1,21 @@
-<p>person works!</p>
+<main>
+  <div id="profile_frame">
+    <div id="profile_picture_name">
+      <img src="{{who.img}}" alt="">
+      <h1>{{who.name}}</h1>
+      <p>{{who.biography}}</p>
+    </div>
+    <div class="article">
+      <h1>{{who.title1}}</h1>
+      <p>{{who.article1}}</p>
+    </div>
+    <div class="article">
+      <h1>{{who.title2}}</h1>
+      <p>{{who.article2}}</p>
+    </div>
+    <div class="article">
+      <h1>{{who.title3}}</h1>
+      <p>{{who.article3}}</p>
+    </div>
+  </div>
+</main>
