try, new, game, programados y estilo para pc y movil

--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,1 +1,8 @@
-<p>game works!</p>
+<main>
+  <div id="buttons">
+    <button><h1>Option 1</h1></button>
+    <button><h1>Option 2</h1></button>
+  </div>
+  <h1 id="question">Which is human???</h1>
+  <h1 id="score">Score: 0pts</h1>
+</main>
