--- a/src/app/pages/new/new.component.html
+++ b/src/app/pages/new/new.component.html
@@ -1,5 +1,7 @@
 <main>
-  <h1>{{newId}}</h1>
-  <article>{{new.content}}</article>
-  <img src="{{new.img}}">
+  <div id="new_frame">
+    <h1>{{new.title}}</h1>
+    <p>{{new.content}}</p>
+    <img src="{{new.img}}">
+  </div>
 </main>
