--- a/src/app/pages/try/try.component.html
+++ b/src/app/pages/try/try.component.html
@@ -1,1 +1,8 @@
-<p>try works!</p>
+<main>
+  <div id="buttons">
+    <button routerLink="/game"><h1>Image game</h1></button>
+    <button routerLink="/game"><h1>Sound game</h1></button>
+    <button routerLink="/game"><h1>Text game</h1></button>
+    <button routerLink="/game"><h1>All game</h1></button>
+  </div>
+</main>
